[gd_scene load_steps=4 format=3 uid="uid://c3w7eldjfo1xc"]

[ext_resource type="Script" path="res://container_transaction_demo/demo.gd" id="1_3h6ee"]
[ext_resource type="Script" path="res://Inventory.gd" id="2_spxh6"]
[ext_resource type="Script" path="res://ResourceContainer.gd" id="3_a6oby"]

[node name="Demo" type="Node" node_paths=PackedStringArray("gold")]
script = ExtResource("1_3h6ee")
gold = NodePath("Gold")

[node name="Player" type="Node" parent="."]

[node name="Inventory" type="Node" parent="Player" node_paths=PackedStringArray("player")]
script = ExtResource("2_spxh6")
player = NodePath("..")
container_size_limit = 100
max_containers = 2

[node name="Gold" type="Node" parent="."]
script = ExtResource("3_a6oby")
id = "gold"
amount = 10
max_amount = 10

[node name="UI" type="CanvasLayer" parent="."]

[node name="Output" type="TextEdit" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
editable = false

[connection signal="added_store" from="Player/Inventory" to="." method="_on_inventory_added_store"]
[connection signal="inventory_updated" from="Player/Inventory" to="." method="_on_inventory_updated"]
[connection signal="attached_store" from="Gold" to="." method="_on_resource_container_attached_store"]
[connection signal="created_store" from="Gold" to="." method="_on_resource_container_created_store"]
[connection signal="transaction_executed" from="Gold" to="." method="_on_resource_container_transaction_executed"]
[connection signal="updated_store" from="Gold" to="." method="_on_resource_container_updated_store"]
